<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- 	////ic_menu_refresh////
 -->    <string name="app_name">Euphrasia</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_greeting">Welcome to Euphrasia</string>
    <string name="title_activity_entry">Entry</string>
    <string name="main_button_start">New</string>
    <string name="edit_entry_name">Title</string>
    <string name="edit_entry_tags">Comma-Separated Tags Please</string>
    <string name="button_record_begin"></string>
    <string name="button_play"></string>
    <string name="edit_entry_language">Language</string>
    <string name="about">About</string>
    <!--
    <string name="button_record_begin">Rec</string>
    <string name="button_play">Play</string>    -->

    <string name="text_entry_native">In your language</string>
    <string name="native_submit">Submit</string>
    <string name="text_entry_foreign">In their language</string>
    <string name="foreign_submit">Submit</string>
    <string name="hint_entry_native">Your Language goes here&#8230; </string>
    <string name="hint_entry_foreign">Foreign Language goes here&#8230; </string>
    <string name="hint_search">Search entries</string>
    <string name="title_activity_search">Search</string>
    <string name="title_main_activity">Home</string>
    <string name="main_button_search">Search</string>
    <string name="sync_btnText">Sync Database</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>
    <string name="tag_field">Tags</string>
    <string name="save_button">Save</string>
    <string name="confirm_save_message">Are you sure you want to save?</string>
    <string name="confirm_save_button">OK</string>
    <string name="title_activity_splash">Splash</string>
    <string name="hello_world">Hello world!</string>
    <string name="create_phrasebook_button">OK</string>
    <string name="create_phrase_edit_text">Name your phrasebook</string>
    <string name="title_activity_browse">Search</string>
    <string name="title_activity_browse_phrasebook">BrowsePhrasebookActivity</string>
    <string name="browse_phrasebooks_button">Browse by Phrasebook.</string>
    <string name="viewAll_btnText">View All Entries</string>
    <string name="language_dialog_btnMessage">OK</string>
    <string name="new_language_message">Add a new language</string>
    <string name="title_activity_login">Login</string>
    <string name="login_message">Please login.</string>
    <string name="new_user_btn">Register</string>
    <string name="existing_user_btn">Sign in</string>
    <string name="new_user_message">Enter new user information.</string>
    <string name="hint_user_account">Create a valid account name.</string>
    <string name="hint_user_password">Enter valid password for new account.</string>
    <string name="hint_user_email">Enter a valid email address.</string>
    <string name="existing_user_message">Enter information for existing user.</string>
    <string name="main_browse_remote">Community</string>
    <string name="title_activity_remote_search">View Shared Entries</string>
    <string name="welcome_subtext">Language education build on immersion.</string>
    
    <string name="browse_remote_title">Browse uploaded entries.</string>
    <string name="browse_filter_hint">Browse by user, title, or language.</string>
    <string name="browse_user">By User</string>
    <string name="browse_language">By Language</string>
    <string name="browse_title">By Title or Native Text</string>
    <string name="browse_remote_button">Go!</string>
    <string name="delete_alert_message">Are you sure you want to delete this entry?</string>
    <string name="delete_confirm_button">OK</string>
    <string name="delete_cancel_button">Cancel</string>
    <string name="login_banner">Euphrasia</string>
    
    <string name="sync_button">Sync</string>
    <string name="remember_text">Remember me.</string>
    <string name="logout">Logout</string>
    
    <string name="title_activity_display">DisplayActivity</string>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
	
    <!-- Nav Drawer Menu Items -->
    <string-array name="menu_title_array">
        <item>Home</item>
        <item>Create New Entry</item>
        <item>Local Entries</item>
        <item>Remote Entries</item>
        <!-- <item>Account</item>
        <item>Settings</item> -->
    </string-array>
    
    <!-- Fragment Activity Titles -->
    <string-array name="fragment_title_array">
        <item>Euphrasia</item>
        <item>Entry</item>
        <item>Local Entries</item>
        <item>Remote Entries</item>
        <item>Account</item>
        <item>Settings</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <array name="nav_drawer_icons">
        <item>@android:drawable/ic_menu_compass</item>
        <item>@drawable/ic_action_mic</item>
        <item>@drawable/ic_action_collection</item>
        <item>@drawable/ic_action_cloud</item>
        <item>@drawable/ic_action_person</item>
        <item>@drawable/ic_action_settings</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string name="browse_remote_all_button">View All</string>


</resources>
