<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/> -->
    
    <item
        android:id="@+id/save"
        
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_button"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/sync"
        android:title="@string/sync_button"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        android:showAsAction="never" />
    
     <item
        android:id="@+id/about"
        android:title="@string/about"
        android:orderInCategory="101"
        android:showAsAction="never" />
    
    
    
<!-- Search, should appear as action button -->
<!--     <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    Settings, should always be in the overflow
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
 -->
</menu>
