<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_user_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_message" />
    
    <EditText 
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:hint="@string/hint_user_account" />
    
      <EditText 
        android:id="@+id/account_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:inputType="textPassword"
        android:hint="@string/hint_user_password" />
    
    

</LinearLayout>
