<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    android:orientation="vertical" >
	   <TextView
	       	android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:textViewStyle="@style/main_textViewStyle"
	       	android:text="@string/welcome_greeting" />
	    
	    <Button 
	    	android:layout_height="wrap_content"
	    	android:layout_width="wrap_content"
	      	android:text="@string/main_button_start" 
	      	android:onClick="onStartEntry"	/>
	    <Button 
	      	android:layout_height="wrap_content"
	      	android:layout_width="wrap_content"
	       	android:text="@string/main_button_search" 
	       	android:onClick="onStartSearch"	/>
	    	
	    	<Button 
	      	android:layout_height="wrap_content"
	      	android:layout_width="wrap_content"
	       	android:text="@string/main_browse_remote" 
	       	android:onClick="onBrowseRemote"	/>
	</LinearLayout>
	
	 <ListView
        android:id="@+id/drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/app_darkColor"
        android:dividerHeight="0dp" />	
</android.support.v4.widget.DrawerLayout>