<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".RemoteSearchActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_remote_title" />
    
    <RadioGroup
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/browse_radio_group"
	    android:background="@drawable/radio_bg"
	    android:orientation="vertical">
	   <!-- <RadioButton android:id="@+id/browse_user_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/browse_user"
	        android:onClick="onRadioButtonClicked"/> -->
	    <RadioButton android:id="@+id/browse_language_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FCFCFC" 
	        android:text="@string/browse_language"
	        android:onClick="onRadioButtonClicked"/>
	     <RadioButton android:id="@+id/browse_title_id"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FCFCFC" 
	        android:text="@string/browse_title"
	        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
    
    <EditText
        android:id="@+id/browse_filter_param"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/browse_filter_hint" />
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="horizontal">
    
    
    <Button 
       		android:layout_height="wrap_content"
       		android:layout_width="wrap_content"
        	android:text="@string/browse_remote_button"
        	android:drawableTop="@drawable/go"
        	android:padding="20dp"
        	android:layout_margin="10dp"
        	android:background="@drawable/rounded_button"
        	android:onClick="doBrowse"	/>
    
    <Button 
       		android:layout_height="wrap_content"
       		android:layout_width="wrap_content"
       		android:layout_margin="10dp"
        	android:text="@string/browse_remote_all_button"
        	android:background="@drawable/rounded_button"
        	android:drawableTop="@drawable/list"
        	android:padding="20dp"
        	android:onClick="doBrowseAll"	/>
    </LinearLayout>

</LinearLayout>
</ScrollView>
