<?xml version="1.0" encoding="utf-8"?>
<DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    tools:context=".EntryActivity" >
		    
	        <LinearLayout
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content" >
		    	<TextView
		   	    	android:id="@+id/entry_title_read"
		    	    android:layout_width="0dip"
		        	android:layout_height="wrap_content"
		        	android:layout_weight=".25" />
		    	<View
		  				android:layout_width="0dip"
		  				android:layout_height="10dp"
		  				android:layout_weight=".15">
					</View>
		    	
		    	<LinearLayout
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:orientation="vertical" >
		    	
		    	    <TextView
		   	    	android:id="@+id/entry_language"
		    	    android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_weight=".25" />
		    	    
		    	    <TextView
		   	    	android:id="@+id/entry_phrasebook"
		    	    android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_weight=".25" />
		    	    
		    	</LinearLayout>
		    
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		  	    	<View
		  				android:layout_width="0dip"
		  				android:layout_height="15dp"
		  				android:layout_weight="1">
					</View>
		    </LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
		    	<TextView
		        	android:id="@+id/entry_tags"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_weight=".45" />
		     	
		     	<Button 
		        	android:layout_width="wrap_content"
		       		android:layout_height="wrap_content"
		        	android:drawableLeft="@drawable/ic_menu_play_clip"
		        	android:text="@string/button_play"  	
		        	android:onClick="handlePlay" />
			</LinearLayout>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		  	    	<View
		  				android:layout_width="0dip"
		  				android:layout_height="30dp"
		  				android:layout_weight="1">
					</View>
		    </LinearLayout>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
		  	    	
			   	<TextView
			   	    android:layout_width="0dip"
			       	android:layout_height="wrap_content"
			       	android:id="@+id/entry_native_read"
			       	android:layout_weight='1'
		        	android:gravity="center"
			       	android:text="@string/text_entry_native" />
			</LinearLayout>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
	  	    	
	  	    	<View
	  				android:layout_width="0dip"
	  				android:layout_height="15dp"
	  				android:layout_weight="1">
				</View>		
	    	</LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"> 
		    	 	
			   	<TextView 
			        android:id="@+id/native_text_read"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight=".75" />
			</LinearLayout>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
	  	    	
	  	    	<View
	  				android:layout_width="0dip"
	  				android:layout_height="20dp"
	  				android:layout_weight="1">
				</View>		
	    	</LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
			   		
			   	<TextView 
			   	    android:layout_width="0dip"
			       	android:layout_height="wrap_content"
			       	android:layout_weight='1'
		        	android:gravity="center"
			       	android:text="@string/text_entry_foreign" />
			</LinearLayout>
			
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
	  	    	
	  	    	<View
	  				android:layout_width="0dip"
	  				android:layout_height="15dp"
	  				android:layout_weight="1">
				</View>		
	    	</LinearLayout>
		    
		    <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"> 
		    	 	  	    
			   	<TextView 
			        android:id="@+id/foreign_text_read"
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:layout_weight=".7"/>
		   </LinearLayout>
		    
		   <LinearLayout 
		        android:layout_width="fill_parent"
		    	android:layout_height="wrap_content">
		  	    	<View
		  				android:layout_width="0dip"
		  				android:layout_height="30dp"
		  				android:layout_weight="1">
					</View>		
		    </LinearLayout>
	    
	
		</LinearLayout>
	</ScrollView>
	
	<ListView
        android:id="@+id/drawer_list"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/list_background"
        android:choiceMode="singleChoice"
        android:divider="@color/app_darkColor"
        android:dividerHeight="0dp" />
 
</DrawerLayout>